templates/mark-vpc.json
{
  "Parameters": {
    "EnvironmentName": {
      "Type": "String"
    },
    "VpcCIDR": {
      "Type": "String"
    },
    "PublicSubnetCIDR": {
      "Type": "String"
    },
    "CitrixPublicSubnetCIDR": {
      "Type": "String"
    },
    "ServerPrivateSubnetCIDR": {
      "Type": "String"
    },
    "TermPrivateSubnetCIDR": {
      "Type": "String"
    },
    "DomainName": {
      "Type": "String"
    },
    "DomainNameServers": {
      "Type": "CommaDelimitedList"
    },
    "AvailabilityZone": {
      "Type": "String"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VpcCIDR"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "EnvironmentName"
            }
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "Internet Gateway"
                ]
              ]
            }
          }
        ]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "NatGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NatGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NatGatewayEIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "Nat Gateway"
                ]
              ]
            }
          }
        ]
      }
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "PublicSubnetCIDR"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${EnvironmentName}-Public Subnet"
            }
          }
        ]
      }
    },
    "CitrixPublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "CitrixPublicSubnetCIDR"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${EnvironmentName}-Citrix Management Public Subnet"
            }
          }
        ]
      }
    },
    "TermPrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "TermPrivateSubnetCIDR"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${EnvironmentName}-Term Private Subnet"
            }
          }
        ]
      }
    },
    "ServerPrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "ServerPrivateSubnetCIDR"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${EnvironmentName}-Server Private Subnet"
            }
          }
        ]
      }
    },
    "PrivateACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "Private ACL"
                ]
              ]
            }
          }
        ]
      }
    },
    "PrivateACLEntry1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "10",
        "NetworkAclId": {
          "Ref": "PrivateACL"
        }
      }
    },
    "PrivateACLEntry2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "10.109.0.0/24",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "10",
        "NetworkAclId": {
          "Ref": "PrivateACL"
        }
      }
    },
    "PrivateACLEntry3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "10.109.1.0/24",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "11",
        "NetworkAclId": {
          "Ref": "PrivateACL"
        }
      }
    },
    "PrivateACLEntry4": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "10.109.3.0/24",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "12",
        "NetworkAclId": {
          "Ref": "PrivateACL"
        }
      }
    },
    "PrivateACLEntry5": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "67.221.225.111/32",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "20",
        "NetworkAclId": {
          "Ref": "PrivateACL"
        }
      }
    },
    "PrivateACLEntry6": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "PrivateACL"
        }
      }
    },
    "PublicACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "Public ACL"
                ]
              ]
            }
          }
        ]
      }
    },
    "PublicACLEntry1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "10",
        "NetworkAclId": {
          "Ref": "PublicACL"
        }
      }
    },
    "PublicACLEntry2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "10",
        "PortRange": {
          "From": "80",
          "To": "80"
        },
        "NetworkAclId": {
          "Ref": "PublicACL"
        }
      }
    },
    "PublicACLEntry3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "20",
        "PortRange": {
          "From": "443",
          "To": "443"
        },
        "NetworkAclId": {
          "Ref": "PublicACL"
        }
      }
    },
    "PublicACLEntry4": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "PublicACL"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "Public Routes"
                ]
              ]
            }
          }
        ]
      }
    },
    "DefaultPublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PublicSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        }
      }
    },
    "PublicSubnetNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicACL"
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        }
      }
    },
    "CitrixPublicSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "CitrixPublicSubnet"
        }
      }
    },
    "CitrixPublicSubnetNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicACL"
        },
        "SubnetId": {
          "Ref": "CitrixPublicSubnet"
        }
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "Private Routes"
                ]
              ]
            }
          }
        ]
      }
    },
    "DefaultPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "NatGatewayId": {
          "Ref": "NatGateway"
        }
      }
    },
    "TermPrivateSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "SubnetId": {
          "Ref": "TermPrivateSubnet"
        }
      }
    },
    "TermPrivateSubnetNetworkACLAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateACL"
        },
        "SubnetId": {
          "Ref": "TermPrivateSubnet"
        }
      }
    },
    "ServerPrivateSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "SubnetId": {
          "Ref": "ServerPrivateSubnet"
        }
      }
    },
    "ServerPrivateSubnetNetworkACLAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateACL"
        },
        "SubnetId": {
          "Ref": "ServerPrivateSubnet"
        }
      }
    },
    "DHCPOptions": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": {
          "Ref": "DomainName"
        },
        "DomainNameServers": {
          "Ref": "DomainNameServers"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "EnvironmentName"
                  },
                  "DHCP Options"
                ]
              ]
            }
          }
        ]
      }
    },
    "DHCPOptionsAssoc": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "DhcpOptionsId": {
          "Ref": "DHCPOptions"
        }
      }
    }
  },
  "Outputs": {
    "VPC": {
      "Value": {
        "Ref": "VPC"
      }
    },
    "PublicSubnet": {
      "Value": {
        "Ref": "PublicSubnet"
      }
    },
    "CitrixPublicSubnet": {
      "Value": {
        "Ref": "CitrixPublicSubnet"
      }
    },
    "TermPrivateSubnet": {
      "Value": {
        "Ref": "TermPrivateSubnet"
      }
    },
    "ServerPrivateSubnet": {
      "Value": {
        "Ref": "ServerPrivateSubnet"
      }
    }
  },
  "Description": "VPC Template for Mark"
}
